hateos agregado en servicio-service